code/backup/latest version(300423)/telemedicineapp/istio/mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: telemedicine-mtls
  namespace: telemedicine
spec:
  mtls:
    mode: STRICT
