code/backup/latest version(300423)/telemedicineapp/istio/destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: telemedicine
  namespace: telemedicine  
spec:
  host: telemedicine
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
